# PhoPyMNEHelper

./: .gitignore  README.md  pyproject.toml  sgconfig.yml
.cursor/plans/: restructure_to_src_layout_9a0199ef.plan.md
src/phopymnehelper/: EEG_data.py  SavedSessionsProcessor.py  __init__.py  __main__.py  anatomy_and_electrodes.py  xdf_files.py
src/phopymnehelper/analysis/computations/: fatigue_analysis.py
src/phopymnehelper/exporters/: AiirTable_Exporter.py  AirTable_Exporter.py  JSON_Exporter.py
src/phopymnehelper/helpers/: indexing_helpers.py
src/phopymnehelper/resources/: __init__.py
src/phopymnehelper/resources/ElectrodeLayouts/simplified/: head_bem_1922V_fill_fixed.stl  pho_2025-06-23_FullHead_0007_fixed.stl
template/: dev.toml  production.toml
