[project]
name = "phopymnehelper"
version = "0.1.1"
description = "Wrappers for common MNE utilities, such as my personal electrode/head mesh configs"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "mne>=1.8.0",
    "pyvistaqt>=0.11.3",
    "trame>=3.12.0",
    "meshio>=5.3.5",
    "gmsh>=4.15.0",
    "nptyping>=2.5.0",
    "numpy~=1.20",
    "pandas>=1.5.3,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mne = { path = "../../mne-python", editable = true }
